[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/button.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/9segment.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/primary_almendra.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=27]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="ThemeButton" type="NinePatchRect"]
self_modulate = Color( 0.376471, 0.258824, 0.121569, 1 )
margin_right = 44.0
margin_bottom = 44.0
texture = ExtResource( 2 )
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 22
patch_margin_bottom = 22
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 27 )
text = "Button"
flat = true

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
